# ComSoc-Project

./: README.md  pyproject.toml  requirements.txt
data/: 00014-00000001.soc
results/: random_sampling.pkl  random_sampling_k_10.pkl  random_sampling_k_15.pkl  random_sampling_k_5.pkl  random_sampling_k_50.pkl  stats_means.pkl  stats_means_k_10.pkl  stats_means_k_15.pkl  stats_regression.pkl  stats_regression_k_10.pkl  stats_regression_k_15.pkl  sushi_data.pkl  sushi_data_k_10.pkl  sushi_data_k_15.pkl  sushi_data_k_5.pkl
src/: main.py  plotting.py  stats.py  table_making.py  test_voting_rule.py  tests.py  utility_functions.py  voting_rules.py
