[project]
name = "comsoc-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "pref-voting>=1.14.18",
    "setuptools>=75.6.0",
    "tqdm>=4.67.1",
]
