[project]
name = "comsoc-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jaxlib>=0.4.36",
    "matplotlib>=3.9.2",
    "numba>=0.60.0",
    "numpy<2.0",
    "numpyro>=0.16.1",
    "pref-voting>=1.14.18",
    "pymc>=5.15.0",
    "setuptools>=75.6.0",
    "tqdm>=4.67.1",
]
