[project]
name = "comsoc-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jaxlib>=0.4.36",
    "jinja2>=3.1.4",
    "matplotlib>=3.9.2",
    "numba>=0.60.0",
    "numpy<2.0",
    "numpyro>=0.16.1",
    "pref-voting>=1.14.18",
    "pymc>=5.15.0",
    "pytest>=8.3.4",
    "setuptools>=75.6.0",
    "tqdm>=4.67.1",
]
